<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Calendar</string>
    <string name="no_event">No event</string>
    <string name="calendar_permission_required">Calendar access is required to manage your events</string>
    <string name="all_day">All day</string>
    <string name="grant_access">Grant access</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="event_time">Event time</string>
    <string name="event_calendar">Event calendar</string>
    <string name="warning_empty_title">Event title is required</string>
    <string name="choose_calendar">Choose a calendar</string>
    <string name="create_event">Create new event</string>
    <string name="edit_event">Edit event</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete this event?</string>
    <string name="confirm_discard_changes">Discard changes?</string>
    <string name="warning_missing_calendar">Please choose a calendar</string>
    <string name="end_time">Ends\n%s</string>
    <string name="default_calendar_name">Local Calendar</string>
    <string name="event_created">Event created.</string>
    <string name="event_updated">Event updated.</string>
    <string name="event_deleted">Event deleted.</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="fahrenheit">%1$.1f\u00b0F</string>
    <string name="show_weather">Show weather</string>
    <string name="updating_weather" tools:ignore="TypographyEllipsis">Updating weather information...</string>
    <string name="location_permission_required">Updating weather requires location access</string>
    <string name="week_start">Week start</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="calendars">Calendars</string>
    <string name="error_location">Unable to determine your location</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>

</resources>
