<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:isScrollContainer="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        >
        <TimePicker
            android:id="@+id/alarm_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <View
            android:id="@+id/divider0"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_time_picker"/>
        <EditText
            android:textColor="#ffff"
            android:id="@+id/alarm_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alarm_details_time_picker"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Work\nAddress\nTime" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_name" />

        <androidcndd.bkdn.cvn.a311.CustomSwitch
            android:id="@+id/alarm_details_repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider2"
            android:checked="true"
            android:text="Repeat weekly" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_weekly" />

        <androidcndd.bkdn.cvn.a311.CustomSwitch
            android:id="@+id/alarm_details_repeat_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider1"
            android:checked="true"

            android:text="@string/details_sunday" />

        <androidcndd.bkdn.cvn.a311.CustomSwitch
            android:id="@+id/alarm_details_repeat_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_sunday"
            android:layout_below="@+id/alarm_details_repeat_sunday"
            android:checked="true"
            android:text="@string/details_monday" />

        <androidcndd.bkdn.cvn.a311.CustomSwitch
            android:id="@+id/alarm_details_repeat_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_monday"
            android:layout_below="@+id/alarm_details_repeat_monday"
            android:checked="true"
            android:text="@string/details_tuesday" />

        <androidcndd.bkdn.cvn.a311.CustomSwitch
            android:id="@+id/alarm_details_repeat_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_tuesday"
            android:layout_below="@+id/alarm_details_repeat_tuesday"
            android:checked="true"
            android:text="@string/details_wednesday" />

        <androidcndd.bkdn.cvn.a311.CustomSwitch
            android:id="@+id/alarm_details_repeat_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_wednesday"
            android:layout_below="@+id/alarm_details_repeat_wednesday"
            android:checked="true"
            android:text="@string/details_thursday" />

        <androidcndd.bkdn.cvn.a311.CustomSwitch
            android:id="@+id/alarm_details_repeat_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_thursday"
            android:layout_below="@+id/alarm_details_repeat_thursday"
            android:checked="true"
            android:text="@string/details_friday" />

        <androidcndd.bkdn.cvn.a311.CustomSwitch
            android:id="@+id/alarm_details_repeat_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_friday"
            android:layout_below="@+id/alarm_details_repeat_friday"
            android:checked="true"
            android:text="@string/details_saturday" />
        <View

            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_saturday" />
        <LinearLayout
            android:id="@+id/alarm_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider4"
            android:background="@drawable/view_touch_selector"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/alarm_label_tone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/details_alarm_tone"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:paddingTop="5dp"
                    android:id="@+id/alarm_label_tone_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/details_alarm_tone_default"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btntone"
                    android:layout_width="50dp"
                    android:layout_marginTop="17dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="95dp"
                    android:onClick="tone"
                    android:paddingBottom="16dp"
                    android:text="tone"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_button_tone"
                    />
            </LinearLayout>


        </LinearLayout>
        <Button
            android:onClick="SaveNotice"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="SAVE"
            android:textStyle="bold"
            android:textColor="#419fc4"
            android:layout_below="@+id/alarm_ringtone_container"
            android:layout_alignParentLeft="true"
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_tone"
            />
        <Button
            android:onClick="CancelNotice"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            android:textStyle="bold"
            android:textColor="#419fc4"
            android:layout_below="@+id/alarm_ringtone_container"
            android:layout_alignParentRight="true"
            android:id="@+id/btncancelnotice"
            android:background="@drawable/custom_btn_tone"/>
        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_ringtone_container" />
    </RelativeLayout>
</ScrollView>
